log
Mon 06 May 2024 06:59:09 PM UTC: 
 tests:  1|8
total_score: 0/70
9715a69
Mon 06 May 2024 07:01:46 PM UTC: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:5: error: unknown type name ‘Treemap’; did you mean ‘TreeMap’?
   41 |     Treemap *tree = (Treemap *)malloc(sizeof(Treemap));
      |     ^~~~~~~
      |     TreeMap
treemap.c:41:22: error: ‘Treemap’ undeclared (first use in this function); did you mean ‘TreeMap’?
   41 |     Treemap *tree = (Treemap *)malloc(sizeof(Treemap));
      |                      ^~~~~~~
      |                      TreeMap
treemap.c:41:22: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:41:31: error: expected expression before ‘)’ token
   41 |     Treemap *tree = (Treemap *)malloc(sizeof(Treemap));
      |                               ^
treemap.c:42:9: error: request for member ‘root’ in something not a structure or union
   42 |     tree->root = NULL;
      |         ^~
treemap.c:43:9: error: request for member ‘current’ in something not a structure or union
   43 |     tree->current = NULL;
      |         ^~
treemap.c:44:9: error: request for member ‘lower_than’ in something not a structure or union
   44 |     tree->lower_than = lower_than;
      |         ^~
treemap.c:45:12: error: returning ‘int *’ from a function with incompatible return type ‘TreeMap *’ [-Werror=incompatible-pointer-types]
   45 |     return tree;
      |            ^~~~
cc1: all warnings being treated as errors
Compilation failed
c2afa20
Mon 06 May 2024 07:03:24 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
3379dc9
Mon 06 May 2024 07:10:42 PM UTC: 
 treemap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
428f94e
